# phoebe-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  builder.bat  builder.sh
wicked-waifus-game-server/: Cargo.toml  gameserver.default.toml
wicked-waifus-game-server/src/: config.rs  main.rs
wicked-waifus-game-server/src/logic/: thread_mgr.rs
wicked-waifus-game-server/src/logic/components/: attribute.rs  concomitant.rs  entity_config.rs  fight_buff.rs  fsm.rs  mod.rs  player_entity_marker.rs  summoner.rs  visibility.rs
wicked-waifus-game-server/src/logic/ecs/: component.rs
wicked-waifus-game-server/src/logic/gacha/: gacha_pool.rs  pool_info.rs  service.rs
wicked-waifus-game-server/src/logic/handler/: achievement.rs  calabash.rs  chat.rs  combat.rs  dummy.rs  entity.rs  friend.rs  gacha.rs  guide.rs  lord_gym.rs  map.rs  misc.rs  mod.rs  role.rs  scene.rs  skill.rs  teleport.rs  tutorial.rs
wicked-waifus-game-server/src/logic/math/: transform.rs  vector.rs
wicked-waifus-game-server/src/logic/player/: basic_info.rs  explore_tools.rs  guides.rs  mod.rs  player_func.rs
wicked-waifus-game-server/src/logic/role/: formation.rs  mod.rs
wicked-waifus-game-server/src/logic/systems/: movement.rs
wicked-waifus-game-server/src/logic/utils/: buff_util.rs  entity_serializer.rs  load_role_info.rs  mod.rs  (+2 more)
wicked-waifus-gateway-server/: Cargo.toml  gateway.default.toml
wicked-waifus-gateway-server/src/: config.rs  main.rs  udp_server.rs
wicked-waifus-gateway-server/src/handler/: client_request_handler.rs
wicked-waifus-gateway-server/src/session/: mod.rs
(+40 files in other folders)
