[package]
name = "wicked-waifus-gateway-server"
edition = "2021"
version.workspace = true

[dependencies]
# Framework
tokio.workspace = true

# Networking
kcp = { workspace = true, features = ["tokio"] }

# Serialization
serde.workspace = true

# Tracing
tracing.workspace = true

# Util
anyhow.workspace = true
thiserror.workspace = true
paste.workspace = true
dashmap.workspace = true
hex.workspace = true

# Internal
wicked-waifus-commons.workspace = true
wicked-waifus-database.workspace = true
wicked-waifus-network.workspace = true
wicked-waifus-protocol-internal.workspace = true
wicked-waifus-protocol.workspace = true
wicked-waifus-protokey.workspace = true
